[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/SaveSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/Menu_saves.gd" type="Script" id=2]
[ext_resource path="res://menus/Menu_tutorial.gd" type="Script" id=3]
[ext_resource path="res://menus/Menu_apagar.gd" type="Script" id=4]

[node name="Menu_saves" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.814514
margin_bottom = -0.814514
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -142.776
margin_top = 46.4268
margin_right = -46.7762
margin_bottom = 60.4268
rect_scale = Vector2( 3, 3 )
text = "Menu de saves"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_voltar" type="Button" parent="."]
margin_left = 485.526
margin_top = 526.051
margin_right = 534.526
margin_bottom = 546.051
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveSlot1" parent="." instance=ExtResource( 1 )]
margin_left = 115.0
margin_top = 175.0
margin_right = -729.0
margin_bottom = -214.0
slot_number = 1

[node name="SaveSlot2" parent="." instance=ExtResource( 1 )]
margin_left = 415.0
margin_top = 175.0
margin_right = -429.0
margin_bottom = -214.0
slot_number = 2

[node name="SaveSlot3" parent="." instance=ExtResource( 1 )]
margin_left = 715.0
margin_top = 175.0
margin_right = -129.0
margin_bottom = -214.0
slot_number = 3

[node name="Menu_tutorial" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Menu_tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.64836
margin_bottom = -1.64838
color = Color( 0, 0, 0, 0.458824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu_tutorial"]
margin_left = 356.7
margin_top = 203.8
margin_right = 661.7
margin_bottom = 413.8
color = Color( 0.341176, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu_tutorial"]
margin_left = 392.119
margin_top = 264.696
margin_right = 551.119
margin_bottom = 278.696
rect_scale = Vector2( 1.5, 1.5 )
text = "Deseja iniciar o tutorial ?"

[node name="Btn_sim" type="Button" parent="Menu_tutorial"]
margin_left = 400.736
margin_top = 350.152
margin_right = 436.736
margin_bottom = 370.152
rect_scale = Vector2( 1.5, 1.5 )
text = "Sim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_nao" type="Button" parent="Menu_tutorial"]
margin_left = 554.186
margin_top = 349.734
margin_right = 591.186
margin_bottom = 369.734
rect_scale = Vector2( 1.5, 1.5 )
text = "Não"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_apagar" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Menu_apagar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.701
margin_bottom = -2.70099
color = Color( 0, 0, 0, 0.458824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu_apagar"]
margin_left = 318.219
margin_top = 220.62
margin_right = 697.219
margin_bottom = 433.62
color = Color( 0.341176, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu_apagar"]
margin_left = 335.925
margin_top = 262.322
margin_right = 564.925
margin_bottom = 293.322
rect_scale = Vector2( 1.5, 1.5 )
text = "Deseja apagar esse save  ?
Todo o seu progresso será perdido !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_sim" type="Button" parent="Menu_apagar"]
margin_left = 400.736
margin_top = 350.152
margin_right = 436.736
margin_bottom = 370.152
rect_scale = Vector2( 1.5, 1.5 )
text = "Sim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_nao" type="Button" parent="Menu_apagar"]
margin_left = 554.346
margin_top = 348.944
margin_right = 591.346
margin_bottom = 368.944
rect_scale = Vector2( 1.5, 1.5 )
text = "Não"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Btn_voltar" to="." method="_on_Btn_voltar_pressed"]
[connection signal="pressed" from="SaveSlot1/Btn_comecar" to="." method="_on_Btn_comecar_pressed"]
[connection signal="pressed" from="SaveSlot2/Btn_comecar" to="." method="_on_Btn_comecar_pressed"]
[connection signal="pressed" from="SaveSlot3/Btn_comecar" to="." method="_on_Btn_comecar_pressed"]
[connection signal="pressed" from="Menu_tutorial/Btn_sim" to="Menu_tutorial" method="_on_Btn_sim_pressed"]
[connection signal="pressed" from="Menu_tutorial/Btn_nao" to="Menu_tutorial" method="_on_Btn_nao_pressed"]
[connection signal="pressed" from="Menu_apagar/Btn_sim" to="Menu_apagar" method="_on_Btn_sim_pressed"]
[connection signal="pressed" from="Menu_apagar/Btn_nao" to="Menu_apagar" method="_on_Btn_nao_pressed"]

[editable path="SaveSlot1"]

[editable path="SaveSlot2"]

[editable path="SaveSlot3"]
